--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "react-pwa",
   "version": "1.0.0",
   "scripts": {
-    "start": "node ./bin/www",
-    "build": "webpack -p --config ./webpack.config.js"
+    "start": "webpack --config=webpack.config.babel.js && babel-node src/server/index.js",
+    "build": "webpack -p --config ./webpack.config.js",
+    "build:browser:dev": "webpack --env=dev --config=webpack.browser.dev.babel.js --progress --profile --colors --json > compilation-stats.json",
+    "build:server:dev": "webpack --env=dev --config=webpack.server.dev.babel.js --progress --profile --colors"
   },
   "main": "index.js",
   "repository": "git@github.com:slashtu/pwa.git",
@@ -19,16 +21,20 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^3.10.0",
+    "webpack": "3.11.0",
     "webpack-bundle-analyzer": "^2.9.2"
   }
 }
