--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "react-pwa",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack --config=webpack.config.babel.js && babel-node src/server/index.js",
-    "build": "webpack -p --config ./webpack.config.js",
-    "build:browser:dev": "webpack --env=dev --config=webpack.browser.dev.babel.js --progress --profile --colors --json > compilation-stats.json",
-    "build:server:dev": "webpack --env=dev --config=webpack.server.dev.babel.js --progress --profile --colors"
+    "clean": "rm -r dist webpack-assets.json",
+    "dev": "export NODE_ENV=development && yarn run build && yarn start",
+    "build": "yarn run build:client && yarn run build:server",
+    "start": "node dist/server/server.js",
+    "build:client": "webpack --config=webpack.client.babel.js",
+    "build:server": "webpack --config=webpack.server.babel.js",
+    "analytics": "export NODE_ENV=production && webpack --config=webpack.analytics.babel.js"
   },
   "main": "index.js",
   "repository": "git@github.com:slashtu/pwa.git",
@@ -44,6 +47,9 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "webpack": "3.11.0",
-    "webpack-bundle-analyzer": "^2.9.2"
+    "webpack-bundle-analyzer": "^2.9.2",
+    "webpack-manifest-plugin": "^2.0.0-rc.2",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.6.0"
   }
 }
