--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "isomorphic-fetch": "^2.2.1",
     "jade": "~1.11.0",
     "lodash": "^4.17.5",
     "morgan": "~1.9.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
     "webpack": "3.11.0",
     "webpack-bundle-analyzer": "^2.9.2",
     "webpack-manifest-plugin": "^2.0.0-rc.2",
