--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^2.0.0",
     "jade": "~1.11.0",
     "lodash": "^4.17.5",
     "morgan": "~1.9.0",
