--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,15 @@
 {
   "presets": [
-    ["es2015", {
-      "loose": true
-    }],
-    "react"
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": "entry"
+      }
+    ],
+    "@babel/react"
   ],
   "plugins": [
-    "transform-decorators-legacy",
-    "transform-class-properties"
+    // Stage 3
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
