--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,12 @@
     "@babel/react"
   ],
   "plugins": [
+    "@babel/plugin-transform-async-to-generator",
+    // Stage 2
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+
     // Stage 3
-    "@babel/plugin-syntax-dynamic-import"
+    "@babel/plugin-syntax-dynamic-import",
+    ["@babel/plugin-proposal-class-properties", { "loose": false }]
   ]
 }
