--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-pwa",
   "version": "1.0.0",
   "scripts": {
-    "clean": "rm -r dist",
+    "clean": "rm -r dist webpack-assets.json",
     "dev": "export NODE_ENV=development && yarn run build && yarn start",
     "build": "yarn run build:client && yarn run build:server",
     "start": "node dist/server/server.js",
@@ -15,7 +15,6 @@
   "author": "Slash Tu <y12341234@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
@@ -24,25 +23,16 @@
     "jade": "~1.11.0",
     "lodash": "^4.17.5",
     "morgan": "~1.9.0",
-    "react": "^16.6.0",
+    "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "regenerator-runtime": "^0.13.1",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/node": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.6",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-async-to-generator": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "8.2.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
