--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,12 @@
 {
   "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "useBuiltIns": "entry"
-      }
-    ],
-    "@babel/react"
+    ["es2015", {
+      "loose": true
+    }],
+    "react"
   ],
   "plugins": [
-    "@babel/plugin-transform-async-to-generator",
-    // Stage 2
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
-
-    // Stage 3
-    "@babel/plugin-syntax-dynamic-import",
-    ["@babel/plugin-proposal-class-properties", { "loose": false }]
+    "transform-decorators-legacy",
+    "transform-class-properties"
   ]
 }
