--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
